-issue#1084: Fix issue with Graph Tree Branch not properly populating when editing report item
-issue#1104: Fix issue with Datetime formatting in developer debug mode
-issue#1106: Fix issue with Template Filters having empty row
-issue#1109: Fixed URL used in redirection when referrer already has parameters in it
-issue#1111: Fixed PHP NOTICE when using LDAP authenication
-issue#1116: Fix issue with filters not allowing "None" or "All" when editing report item
-issue#1119: Reduced amount of data feteched for CPU usage to just the data used
-issue: New Graph pagenation and filter reset

1.1.28
-issue#958: User Group Tree permissions not calculated fully
-issue#959: Issue viewing email reports due to email client decoding problems
-issue#992: RRDfile naming issues that result from random sorting during export
-issue#1012: Issue where disabled devices will not appear in Tree editor
-issue#1044: Handle invalid exclusion regex properly when viewing the log
-issue#1045: Issue with multiple pages and confirmation dialogs
-issue#1048: Problem importing vdefs from templates
-issue#1053: Remote Data Collector now works with https and self signed certificates
-issue#1055: Errors in data source statistics inserts when invalid output is encountered
-issue#1057: CVE-2017-16641 - Potential vulnerability in RRDtool functions
-issue#1058: ICMP Ping to and IPv6 address fails to gather data for ping latency
-issue#1059: Aggregate item filter should use regular expressions to avoid SQL errors due to flawed filter logic
-issue#1064: When a Device Template is removed, Automation Templates for that Device Template remain
-issue#1066: CVE-2017-16660 in remote_agent.php logging function
-issue#1066: CVE-2017-16661 in view log file
-issue#1071: CVE-2017-16785 in global_session.php Reflection XSS
-issue#1074: Boost records get stuck in archive
-issue#1079: Undefined index in lib/snmpagent.php
-issue#1085: Undefined function html_log_input_error