@@ -92,9 +92,9 @@ function ss_host_cpu($hostname, $host_id, $snmp_auth, $cmd, $arg1 = '', $arg2 = 
 
 			for ($i=0;($i<sizeof($arr_index));$i++) {
 				if ($arg == 'usage') {
-					print $arr_index[$i] . '!' . $arr[$i] . "\n";
+					print $i . '!' . $arr[$i] . "\n";
 				} elseif ($arg == 'index') {
-					print $arr_index[$i] . '!' . $arr_index[$i] . "\n";
+					print $i . '!' . $arr_index[$i] . "\n";
 				}
 			}
 		} else {
@@ -129,14 +129,18 @@ function ss_host_cpu_get_cpu_usage($hostname, $snmp_community, $snmp_version, $s
 	$arr = ss_host_cpu_reindex(cacti_snmp_walk($hostname, $snmp_community, '.1.3.6.1.2.1.25.3.3.1.2', $snmp_version, $snmp_auth_username, $snmp_auth_password, $snmp_auth_protocol, $snmp_priv_passphrase, $snmp_priv_protocol, $snmp_context, $snmp_port, $snmp_timeout, $ping_retries, $max_oids, SNMP_POLLER));
 	$return_arr = array();
 
-	$j = 0;
+	$j = 1;
+	$sum = 0;
 
 	for ($i=0;($i<sizeof($arr));$i++) {
 		if (is_numeric($arr[$i])) {
 			$return_arr[$j] = $arr[$i];
+			$sum += $arr[$i];
 			$j++;
 		}
 	}
+
+	$return_arr[0] = round($sum / sizeof($return_arr));
 
 	return $return_arr;
 }
@@ -145,7 +149,7 @@ function ss_host_cpu_get_indexes($hostname, $snmp_community, $snmp_version, $snm
 	$arr = ss_host_cpu_reindex(cacti_snmp_walk($hostname, $snmp_community, '.1.3.6.1.2.1.25.3.3.1.2', $snmp_version, $snmp_auth_username, $snmp_auth_password, $snmp_auth_protocol, $snmp_priv_passphrase, $snmp_priv_protocol, $snmp_context, $snmp_port, $snmp_timeout, $ping_retries, $max_oids, SNMP_POLLER));
 	$return_arr = array();
 
-	$j = 0;
+	$j = 1;
 
 	for ($i=0;($i<sizeof($arr));$i++) {
 		if (is_numeric($arr[$i])) {
@@ -153,6 +157,8 @@ function ss_host_cpu_get_indexes($hostname, $snmp_community, $snmp_version, $snm
 			$j++;
 		}
 	}
+
+	$return_arr[0] = "Total";
 
 	return $return_arr;
 }
